# ChangeLog for dev-ruby/rack-mount
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack-mount/ChangeLog,v 1.2 2011/02/13 21:22:44 tomka Exp $

  13 Feb 2011; Thomas Kahle <tomka@gentoo.org> rack-mount-0.6.13.ebuild:
  keyworded ~x86 per bug 351835

*rack-mount-0.6.13 (03 Dec 2010)

  03 Dec 2010; Hans de Graaff <graaff@gentoo.org> +rack-mount-0.6.13.ebuild,
  +metadata.xml:
  Initial import. New dependency of Rails 3.0.3.
