@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/sinatra
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sinatra/ChangeLog,v 1.17 2011/04/10 07:07:40 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sinatra/ChangeLog,v 1.18 2011/04/10 07:09:02 graaff Exp $
+
+*sinatra-1.2.2 (10 Apr 2011)
+
+  10 Apr 2011; Hans de Graaff <graaff@gentoo.org> +sinatra-1.2.2.ebuild:
+  Version bump.
 
   10 Apr 2011; Hans de Graaff <graaff@gentoo.org> -sinatra-1.0.ebuild,
   -sinatra-1.1.2.ebuild, -sinatra-1.1.3.ebuild, -sinatra-1.2.0.ebuild:
