@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rack-mount
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack-mount/ChangeLog,v 1.2 2011/02/13 21:22:44 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack-mount/ChangeLog,v 1.3 2011/04/10 07:05:05 graaff Exp $
+
+*rack-mount-0.7.1 (10 Apr 2011)
+
+  10 Apr 2011; Hans de Graaff <graaff@gentoo.org> +rack-mount-0.7.1.ebuild:
+  Version bump.
 
   13 Feb 2011; Thomas Kahle <tomka@gentoo.org> rack-mount-0.6.13.ebuild:
   keyworded ~x86 per bug 351835
